fixed events header and links navigation image

--- a/pages/events.html
+++ b/pages/events.html
@@ -20,14 +20,10 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-style">
     <!-- Brand -->
-<<<<<<< HEAD
-    <a class="navbar-brand" href="#">
-      <img src="../images/navbar_logo_v2.png" style="width:220px;">
-=======
-    <a class="navbar-brand" href="../index.html">
-        <img src="../images/navbar_logo_v2.png" class="navigation-logo">
->>>>>>> 73fff6acaf26c47106f7897c74a2e95df378b220
+    <a class="navbar-brand" href="../../index.html">
+      <img src="../images/navbar_logo_v2.png" class="navigation-logo">
     </a>
+
 
     <!-- Toggler/collapsibe Button -->
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
@@ -37,47 +33,40 @@
     <!-- Navbar links -->
     <div class="collapse navbar-collapse" id="collapsibleNavbar">
       <ul class="navbar-nav ml-auto">
-
         <li class="nav-item">
           <a class="nav-link" href="../index.html">Home</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link active" href="../pages/events.html">Events</a>
+          <a class="nav-link" href="events.html">Events</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/store.html">Store</a>
+          <a class="nav-link" href="store.html">Store</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="../pages/services.html">Services</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/history.html">History</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/cvrr.html">CVRR</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/join.html">Join</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="../pages/about.html">About</a>
+            <a class="nav-link" href="services.html">Services</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="links.html">Links</a>
         </li>
         <li class="nav-item dropdown dropleft">
           <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown">
-            More
+            History
           </a>
           <div class="dropdown-menu my-2">
-            <a class="dropdown-item" href="#">Extra 1</a>
-            <a class="dropdown-item" href="#">Extra 2</a>
-            <a class="dropdown-item" href="#">Extra 3</a>
-          </li>
-
-        </ul>
-      </div>
-    </nav>
+            <a class="dropdown-item" href="history/maps.html">Maps</a>
+            <a class="dropdown-item" href="history/timeline.html">Timeline</a>
+            <a class="dropdown-item" href="history/articles.html">Articles</a>
+            <a class="dropdown-item" href="history/cvrr.html">CVRR</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="join.html">Join</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="about.html">About</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
 
 
 
