--- a/pages/links.html
+++ b/pages/links.html
@@ -21,8 +21,8 @@
 
     <nav class="navbar navbar-expand-lg navbar-light navbar-style">
       <!-- Brand -->
-      <a class="navbar-brand" href="../index.html">
-          <img src="../images/navbar_logo_v2.png" style="width:220px;">
+      <a class="navbar-brand" href="../../index.html">
+        <img src="../images/navbar_logo_v2.png" class="navigation-logo">
       </a>
 
 
