--- a/index.html
+++ b/index.html
@@ -11,6 +11,12 @@
     <!-- Custom CSS -->
     <link rel="stylesheet" type="text/css" href="styles/master.css">
 
+    <!--Favicon-->
+    <link rel="apple-touch-icon" sizes="180x180" href="images/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="images/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="images/favicon/favicon-16x16.png">
+    <link rel="manifest" href="images/favicon/site.webmanifest">
+
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
@@ -35,19 +41,19 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="index.html">Home</a>
+            <a class="nav-link btn btn-info" href="index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/events.html">Events</a>
+            <a class="nav-link  btn btn-info" href="pages/events.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="pages/store.html">Store</a>
+            <a class="nav-link  btn btn-info" href="pages/store.html">Store</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="pages/services.html">Services</a>
+              <a class="nav-link  btn btn-info" href="pages/services.html">Services</a>
           </li>
           <li class="nav-item dropdown dropleft">
-            <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle btn btn-info" href="#" id="navbardrop" data-toggle="dropdown">
               History
             </a>
             <div class="dropdown-menu my-2">
@@ -57,10 +63,10 @@
               <a class="dropdown-item" href="pages/history/cvrr.html">CVRR</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="pages/join.html">Join</a>
+              <a class="nav-link btn btn-info" href="pages/join.html">Join</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="pages/about.html">About</a>
+              <a class="nav-link btn btn-info" href="pages/about.html">About</a>
           </li>
         </ul>
       </div>
