--- a/pages/events.html
+++ b/pages/events.html
@@ -11,6 +11,12 @@
   <!-- Custom CSS -->
   <link rel="stylesheet" type="text/css" href="../styles/master.css">
 
+  <!--Favicon-->
+  <link rel="apple-touch-icon" sizes="180x180" href="../images/favicon/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="../images/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="../images/favicon/favicon-16x16.png">
+  <link rel="manifest" href="../images/favicon/site.webmanifest">
+
   <!-- Font Awesome -->
   <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
