fixed navigation, added homepage banner, news section, headers

--- a/pages/history/maps.html
+++ b/pages/history/maps.html
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
-    <title>Home</title>
+    <title>History - Maps - Mechaniscburg Museum Association</title>
   </head>
 
   <body>
@@ -41,19 +41,22 @@
       <div class="collapse navbar-collapse" id="collapsibleNavbar">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item">
-            <a class="nav-link" href="../../index.html">Home</a>
+            <a class="nav-link btn btn-info" href="../../index.html">Home</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../pages/events.html">Events</a>
+            <a class="nav-link btn btn-info" href="../events.html">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="../../pages/store.html">Store</a>
+            <a class="nav-link btn btn-info" href="../store.html">Store</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="../../pages/services.html">Services</a>
+              <a class="nav-link btn btn-info" href="../services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-info" href="../links.html">Links</a>
           </li>
           <li class="nav-item dropdown dropleft">
-            <a class="nav-link dropdown-toggle " href="#" id="navbardrop" data-toggle="dropdown">
+            <a class="nav-link dropdown-toggle btn btn-info" href="#" id="navbardrop" data-toggle="dropdown">
               History
             </a>
             <div class="dropdown-menu my-2">
@@ -63,10 +66,10 @@
               <a class="dropdown-item" href="cvrr.html">CVRR</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="../../pages/join.html">Join</a>
+              <a class="nav-link btn btn-info" href="../join.html">Join</a>
           </li>
           <li class="nav-item">
-              <a class="nav-link" href="../../pages/about.html">About</a>
+              <a class="nav-link btn btn-info" href="../about.html">About</a>
           </li>
         </ul>
       </div>
