--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- Font Awesome -->
     <script src="https://kit.fontawesome.com/60213d849e.js" crossorigin="anonymous"></script>
 
-    <title>Home</title>
+    <title>Home - Mechaniscburg Museum Association</title>
   </head>
 
   <body>
@@ -51,6 +51,9 @@
           </li>
           <li class="nav-item">
               <a class="nav-link  btn btn-info" href="pages/services.html">Services</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-info" href="pages/links.html">Links</a>
           </li>
           <li class="nav-item dropdown dropleft">
             <a class="nav-link dropdown-toggle btn btn-info" href="#" id="navbardrop" data-toggle="dropdown">
@@ -83,11 +86,19 @@
     </div>
     <!-- End of alert section-->
 
+    <img src="images/head_image.png" alt="banner-image" width="100%"/>
     <!-- Parent Container-->
     <div class="container-xl py-2">
+      
+      <h2 class="text-center py-5">~ NEWS ~</h2>
 
+      <p class="news-item">APRIL 17, OUR CHRISTMAS EXHIBIT IN THE FREIGHT STATION REOPENS SATURDAYS ONLY, 12 - 3</p>
+      <p class="news-item">WE ARE ACCEPTING ORDERS FOR JULY DELIVERY OF OUR KIWANIS/MUSEUM BLUEBERRIES.</p>
+      <p class="news-item">CHECK OUT OUR NEW CVRR T-SHIRTS AND SWEATSHIRTS!</p>
 
+      <hr class="dashed">
 
+      <h2 class="text-center py-5">~ OUR HISTORIC BUILDINGS ~</h2>
       <div class="row py-2">
         <div class="col-lg-2"><img class='img-circle' src='images/Frankenberger_Tavern.jpg' /></div>
         <div class="col-lg-10 py-2">
