--- a/pages/history/timeline.html
+++ b/pages/history/timeline.html
@@ -423,35 +423,32 @@
 
     <!-- Footer -->
     <footer class="align-bottom">
-        <div class="container-fluid footer-class py-4">
-
-            <div class="row">
-
-                <div class="col-lg-8 order-lg-1 py-2">
-                    <p class="footer-text">
-                      The Mechanicsburg Museum Association was founded in 1975 in a community effort to preserve the Stationmaster’s House, a historic Mechanicsburg landmark, from destruction. Since its founding, the Association has preserved and promoted Mechanicsburg’s unique history with educational programs, gallery exhibits, and by acquiring four more historic buildings in the area.
-                    </p>
-                </div>
-                <div class="col-lg-4 order-lg-2 py-2">
-                    <p class="footer-text">
-                    Mechanicsburg Museum Association
-                    <br>
-                    2 W Strawberry Alley
-                    <br>
-                    Mechanicsburg, PA 17055
-                    <br>
-                    Phone: (222) 697-6088
-                    <br>
-                    Email: mechanicsburgmuseum@gmail.com
-                    </p>
-                    <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
-                      <i class="fab fa-facebook fa-2x" style="color:white"></i>
-                    </a>
-                </div>
-
+      <div class="container-fluid footer-class py-4">
+          <div class="row">
+              <div class="col-lg-6 offset-lg-1 order-lg-1 py-2">
+                  <p class="footer-text">
+                    The Mechanicsburg Museum Association was founded in 1975 in a community effort to preserve the Stationmaster’s House, a historic Mechanicsburg landmark, from destruction. Since its founding, the Association has preserved and promoted Mechanicsburg’s unique history with educational programs, gallery exhibits, and by acquiring four more historic buildings in the area.
+                  </p>
+              </div>
+              <div class="col-lg-4 offset-lg-1 order-lg-2 py-2">
+                  <p class="footer-text">
+                  Mechanicsburg Museum Association
+                  <br>
+                  2 W Strawberry Alley
+                  <br>
+                  Mechanicsburg, PA 17055
+                  <br>
+                  Phone: <a href="tel:+2226976088">(222) 697-6088</a> 
+                  <br>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  </p>
+                  <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
+                    <i class="fab fa-facebook fa-2x" style="color:white"></i>
+                  </a>
+              </div>
+          </div>
         </div>
-            </div>
-    </footer>
+      </footer>
     <!--Copyright Info-->
     <p class="copyright-text">
       © 2005-2021 Mechanicsburg Museum Association. All rights 
