Updated Home page with proper information. Changed button colors to match the color theme.

--- a/index.html
+++ b/index.html
@@ -88,8 +88,9 @@
 
     <img src="images/head_image.png" alt="banner-image" width="100%"/>
     <!-- Parent Container-->
+    <!--New Content Goes here-->
     <div class="container-xl py-2">
-      
+
       <h2 class="text-center py-5">~ NEWS ~</h2>
 
       <p class="news-item">APRIL 17, OUR CHRISTMAS EXHIBIT IN THE FREIGHT STATION REOPENS SATURDAYS ONLY, 12 - 3</p>
@@ -103,7 +104,7 @@
         <div class="col-lg-2"><img class='img-circle' src='images/Frankenberger_Tavern.jpg' /></div>
         <div class="col-lg-10 py-2">
           <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
+          <i>217 E Main, Mechanicsburg PA 17055</i>
           <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
         </div>
       </div>
@@ -112,9 +113,9 @@
 
       <div class="row py-2">
         <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
+          <h4>1886 CVRR Freight Station</h4>
+          <i>3 West Allen Street, Mechanicsburg, PA 17055</i>
+          <p>Three exhibits each year and Reference Library and Archives <a class="two" href="url">Click here to discover more</a></p>
         </div>
         <div class="col-lg-2"><img class='img-circle-2' src='images/freight_station.jpg' /></div>
       </div>
@@ -124,9 +125,9 @@
       <div class="row py-2">
         <div class="col-lg-2"><img class='img-circle' src='images/Passenger_Station.jpg' /></div>
         <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
+          <h4>1867 CVRR Passenger Station</h4>
+          <i>2 W Strawberry Alley, Mechanicsburg PA 17055</i>
+          <p>Mechanicsburg Museum Association main office and Free exhibits of CVRR history and Mechanicsburg History. Currently closed due to the pandemic. <a class="two" href="url">Click here to discover more</a></p>
         </div>
       </div>
 
@@ -134,9 +135,9 @@
 
       <div class="row py-2">
         <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
+          <h4>1866 Stationmaster's House</h4>
+          <i>4 W Strawberry Alley</i>
+          <p>Furnished in 1860s style. Currently closed due to the pandemic. <a class="two" href="url">Click here to discover more</a></p>
         </div>
         <div class="col-lg-2"><img class='img-circle-2' src='images/Stationmasters_House.jpg' /></div>
       </div>
@@ -146,9 +147,8 @@
       <div class="row py-2">
         <div class="col-lg-2"><img class='img-circle' src='images/washington_street.jpg' /></div>
         <div class="col-lg-10 py-2">
-          <h4>1801 Frankenberger Tavern</h4>
-          <i>217 E Main, Mechanicsburg PA</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p><br>
+          <h4>1899 Washington Street Station</h4>
+          <p>Exhibits visible through the window.   <a class="two" href="url">Click here to discover more</a></p><br>
         </div>
       </div>
     </div>
@@ -169,7 +169,7 @@
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+2226976088">(222) 697-6088</a> 
+                  Phone: <a href="tel:+2226976088">(222) 697-6088</a>
                   <br>
                   Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
                   </p>
