some about section work

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <div class="container">
         <div class="alert alert-dismissible">
           <button type="button" class="close" data-dismiss="alert">&times;</button>
-          <strong>COVID-19 Update:</strong> Our historic buildings are closed until pandemic eases. Check back for further information.
+          <strong>COVID-19 Update:</strong> Our historic buildings are closed until the pandemic eases. Check back for further information.
       </div>
     </div>
     <!-- End of alert section-->
@@ -93,7 +93,6 @@
 
       <h2 class="text-center py-5">~ NEWS ~</h2>
 
-      <p class="news-item">APRIL 17, OUR CHRISTMAS EXHIBIT IN THE FREIGHT STATION REOPENS SATURDAYS ONLY, 12 - 3</p>
       <p class="news-item">WE ARE ACCEPTING ORDERS FOR JULY DELIVERY OF OUR KIWANIS/MUSEUM BLUEBERRIES.</p>
       <p class="news-item">CHECK OUT OUR NEW CVRR T-SHIRTS AND SWEATSHIRTS!</p>
 
@@ -105,7 +104,7 @@
         <div class="col-lg-10 py-2">
           <h4>1801 Frankenberger Tavern</h4>
           <i>217 E Main, Mechanicsburg PA 17055</i>
-          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="url">Click here to discover more</a></p>
+          <p>Mechanicsburg's oldest known building. Furnished in 1801 style. <a class="two" href="pages/about.html#FrankenbergerTavern">Click here to discover more</a></p>
         </div>
       </div>
 
@@ -115,7 +114,7 @@
         <div class="col-lg-10 py-2">
           <h4>1886 CVRR Freight Station</h4>
           <i>3 West Allen Street, Mechanicsburg, PA 17055</i>
-          <p>Three exhibits each year and Reference Library and Archives <a class="two" href="url">Click here to discover more</a></p>
+          <p>Three exhibits each year and Reference Library and Archives <a class="two" href="pages/about.html#CVRRFreight">Click here to discover more</a></p>
         </div>
         <div class="col-lg-2"><img class='img-circle-2' src='images/freight_station.jpg' /></div>
       </div>
@@ -127,7 +126,7 @@
         <div class="col-lg-10 py-2">
           <h4>1867 CVRR Passenger Station</h4>
           <i>2 W Strawberry Alley, Mechanicsburg PA 17055</i>
-          <p>Mechanicsburg Museum Association main office and Free exhibits of CVRR history and Mechanicsburg History. Currently closed due to the pandemic. <a class="two" href="url">Click here to discover more</a></p>
+          <p>Mechanicsburg Museum Association main office and Free exhibits of CVRR history and Mechanicsburg History. Currently closed due to the pandemic. <a class="two" href="pages/about.html#CVRRStation">Click here to discover more</a></p>
         </div>
       </div>
 
@@ -137,7 +136,7 @@
         <div class="col-lg-10 py-2">
           <h4>1866 Stationmaster's House</h4>
           <i>4 W Strawberry Alley</i>
-          <p>Furnished in 1860s style. Currently closed due to the pandemic. <a class="two" href="url">Click here to discover more</a></p>
+          <p>Furnished in 1860s style. Currently closed due to the pandemic. <a class="two" href="pages/about.html#StationmasterHouse">Click here to discover more</a></p>
         </div>
         <div class="col-lg-2"><img class='img-circle-2' src='images/Stationmasters_House.jpg' /></div>
       </div>
@@ -148,7 +147,7 @@
         <div class="col-lg-2"><img class='img-circle' src='images/washington_street.jpg' /></div>
         <div class="col-lg-10 py-2">
           <h4>1899 Washington Street Station</h4>
-          <p>Exhibits visible through the window.   <a class="two" href="url">Click here to discover more</a></p><br>
+          <p>Exhibits visible through the window.   <a class="two" href="pages/about.html#WashingtonStreet">Click here to discover more</a></p><br>
         </div>
       </div>
     </div>
