Final Major update
I have added the purchase forms in the directory, About Us page general information inserted. Some minor changes to master.css for the about us page.

--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
 
       <h2 class="text-center py-5">~ NEWS ~</h2>
 
-      <p class="news-item">WE ARE ACCEPTING ORDERS FOR JULY DELIVERY OF OUR KIWANIS/MUSEUM BLUEBERRIES.</p>
-      <p class="news-item">CHECK OUT OUR NEW CVRR T-SHIRTS AND SWEATSHIRTS!</p>
+      <p class="news-item">WE ARE ACCEPTING ORDERS FOR JULY DELIVERY OF OUR KIWANIS/MUSEUM BLUEBERRIES. <a href="forms\berry.pdf" target="_blank">Link</a></p>
+      <p class="news-item">CHECK OUT OUR NEW CVRR T-SHIRTS AND SWEATSHIRTS! <a href="forms\trainshirt.pdf" target="_blank">Link</a></p>
 
       <hr class="dashed">
 
