--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     </div>
     <!-- End of alert section-->
 
-    <img src="images/head_image.png" alt="banner-image" width="100%"/>
+    <img src="images/homepage/homepage.jpg" alt="banner-image" width="100%"/>
     <!-- Parent Container-->
     <!--New Content Goes here-->
     <div class="container-xl py-2">
