Changes client requested. Changelog includes:
Larger Text

Mobile Menu Button

Link color corrections

Staff list changes

Moving of Facebook plugin

Membership form links

--- a/pages/about.html
+++ b/pages/about.html
@@ -147,27 +147,23 @@ The Mechanicsburg Museum Association was incorporated as a non-profit corporatio
             <hr>
             <ul>
               <li>Frankie Hensel: President</li>
+              <li>Linda Willis: Vice President</li>
               <li>Sandy Showers: Treasurer</li>
               <li>Faith Matthews: Recording Secretary</li>
-              <li>Jean Layne</li>
-              <li>Jeanne Souder</li>
-              <li>Pam Weaver</li>
-              <li>Carvel Markley</li>
-              <li>Gary Weber</li>
-              <li>John Behel</li>
-              <li>Pat Berkheimer</li>
-              <li>Virginia Herring</li>
               <li>Christine Dixon</li>
-              <li>Linda Willis</li>
               <li>Cheryl Hoke</li>
+              <li>Pat Berkheimer</li>
+              <li>Pam Weaver</li>
               <li>Dennis Rehm</li>
+              <li>Virginia Herring</li>
+              <li>Gary Weber</li>
               <li>John Klinger</li>
               <li>Beverly Bone</li>
             </ul>
             <h4>Staff</h4>
             <ul>
               <li>Steven B. Zimmerman: Museum Director</li>
-              <li>Kimberly Dubas: Secretary</li>
+              <li>Kimberly Dubas: Office Manager</li>
               <li>John Klinger: Webmaster</li>
               <li>Faith Matthews: Facebook</li>
             </ul>
@@ -302,9 +298,9 @@ The Mechanicsburg Museum Association was incorporated as a non-profit corporatio
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+7176976088">(717) 697-6088</a>
+                  Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                   <br>
-                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                   </p>
                   <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                     <i class="fab fa-facebook fa-2x" style="color:white"></i>
