--- a/pages/store.html
+++ b/pages/store.html
@@ -214,9 +214,9 @@ This book is also available by mail order.  The cost is $6.00 plus $0.36 PA sale
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+7176976088">(717) 697-6088</a> 
+                  Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                   <br>
-                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                   </p>
                   <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                     <i class="fab fa-facebook fa-2x" style="color:white"></i>
