--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <!-- Toggler/collapsibe Button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
+        <span class="navbar-toggler"><img src="images/button.svg" class="menubutton"></span>
       </button>
 
       <!-- Navbar links -->
@@ -168,9 +168,9 @@
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+7176976088">(717) 697-6088</a>
+                  Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                   <br>
-                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                   </p>
                   <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                     <i class="fab fa-facebook fa-2x" style="color:white"></i>
