--- a/pages/events.html
+++ b/pages/events.html
@@ -26,7 +26,7 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light navbar-style">
     <!-- Brand -->
-    <a class="navbar-brand" href="../../index.html">
+    <a class="navbar-brand" href="../index.html">
       <img src="../images/navbar_logo_v2.png" class="navigation-logo">
     </a>
 
@@ -99,9 +99,6 @@
  <div class="col">
    <h1 class="textcenter">Events</h1>
     <hr>
-   <div class="facebookfix">
-   <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMechanicsburg-Museum-Association-587541104938246%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
- </div>
    <h2 class="textcenter">Freight Station Exhibits: Free Admission</h2>
    <p class="textcenter">Our exhibit has been closed due the pandemic.</p>
    <h2 class="textcenter">Events</h2>
@@ -140,9 +137,9 @@
                 <br>
                 Mechanicsburg, PA 17055
                 <br>
-                Phone: <a href="tel:+7176976088">(717) 697-6088</a> 
+                Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                 <br>
-                Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                 </p>
                 <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                   <i class="fab fa-facebook fa-2x" style="color:white"></i>
