--- a/pages/join.html
+++ b/pages/join.html
@@ -101,7 +101,7 @@
                  <h1>Join Us</h1>
                  <hr>
                  <p>Members of the Mechanicsburg Museum Association are "Keeping our History Alive." The financial support of our members is key to lighting, heating, air conditioning and maintaining our five properties, and preserving and exhibiting historical items. Benefits of membership include our newsletters, and free admission to both of our lecture series.</p>
-                 <a href="memberform.html">Membership Form</a>
+                 <a href="http://www.mechanicsburgmuseum.org/memberform.html" target="_blank">Membership Form</a>
                  <hr>
                  <h3>Benefits of Membership</h3>
                  <p>By far the biggest benefit of membership is the opportunity to join our corps of volunteers. The wide range of opportunities has something for almost anyone. Meet interesting people working in teams, or work alone on "backroom" projects. Meet the public, or work behind the scenes. Work as a leader or a follower.  Do one thing, or many things. Some of us work one three hour shift per month as docents in our buildings, while for others, the museum is a second home. Try whatever interests you. If it turns out to be wrong for you, there is no pressure to continue. Go ahead and try something else. Training is provided where appropriate. Areas of interest include:</p>
@@ -147,7 +147,7 @@
           <p>An opportunity to help direct the activities of the Museum; an involved, challenging leadership role.</p>
           <h4>Volunteer Consultant</h4>
           <p>If you have special skills that may be of use to us on occasion, let us know.</p>
-          <a href="memberform.html">Membership Form</a>
+          <a href="http://www.mechanicsburgmuseum.org/memberform.html" target="_blank">Membership Form</a>
          </div>
        </div>
      </div>
@@ -169,9 +169,9 @@
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+7176976088">(717) 697-6088</a> 
+                  Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                   <br>
-                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                   </p>
                   <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                     <i class="fab fa-facebook fa-2x" style="color:white"></i>
