--- a/pages/links.html
+++ b/pages/links.html
@@ -88,6 +88,11 @@
     <div class="container-xl py-2">
       <h1>Links</h1>
       <hr>
+      <h2>Facebook Page</h2>
+      <div class="facebookfix">
+      <iframe src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2FMechanicsburg-Museum-Association-587541104938246%2F&tabs=timeline&width=500&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId" width="500" height="500" style="border:none;overflow:hidden" scrolling="no" frameborder="0" allowfullscreen="true" allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"></iframe>
+    </div>
+      <hr>
       <h2>Local History: Resources and Attractions</h2>
       <br>
       <ul>
@@ -137,9 +142,9 @@
                   <br>
                   Mechanicsburg, PA 17055
                   <br>
-                  Phone: <a href="tel:+7176976088">(717) 697-6088</a> 
+                  Phone: <a href="tel:+7176976088" class="footerlinks">(717) 697-6088</a>
                   <br>
-                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com">mechanicsburgmuseum@gmail.com</a>
+                  Email: <a href = "mailto: mechanicsburgmuseum@gmail.com" class="footerlinks">mechanicsburgmuseum@gmail.com</a>
                   </p>
                   <a new href="https://www.facebook.com/Mechanicsburg-Museum-Association-587541104938246/" target="_blank">
                     <i class="fab fa-facebook fa-2x" style="color:white"></i>
