--- a/pages/history/timeline.html
+++ b/pages/history/timeline.html
@@ -34,7 +34,7 @@
 
       <!-- Toggler/collapsibe Button -->
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsibleNavbar">
-        <span class="navbar-toggler-icon"></span>
+          <span class="navbar-toggler"><img src="../../images/button.svg" class="menubutton"></span>
       </button>
 
       <!-- Navbar links -->
