Fixed an issue where the links page link took the user to the old links page.

--- a/pages/about.html
+++ b/pages/about.html
@@ -106,8 +106,8 @@
 
             There is no food or drink available in the museum buildings, but there are restaurants within a short walk on Main Street, and many more within a short drive.  Ask any of our museum docents for specifics.
 
-            For other local attractions, food, and lodging info, check out our <a href="http://www.mechanicsburgmuseum.org/links.html">links</a>.</p>
-            <a href="http://www.mechanicsburgmuseum.org/links.html">Links</a>
+            For other local attractions, food, and lodging info, check out our <a href="../pages/links.html">links</a>.</p>
+            <a href="../pages/links.html">Links</a>
             <h4 style="padding-top:10px">Winter Weather</h4>
             <hr>
             <p>For the safety of our volunteers, the museum will be closed when the Mechanicsburg Area School District closes for weather. We will also close for snow or ice on Saturdays or during Sunday events.</p>
